--- a/templates/edit_profil.html
+++ b/templates/edit_profil.html
@@ -6,7 +6,7 @@
     <title>Edit Profil</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/profil.css') }}"
+      href="{{ url_for('static', filename='css/edit_profil.css') }}"
     />
   </head>
   <body>
