--- a/templates/edit_profil.html
+++ b/templates/edit_profil.html
@@ -26,6 +26,15 @@
         enctype="multipart/form-data"
       >
         <div class="form-group">
+          <label for="profile_picture">Ganti Foto Profil</label>
+          <input
+            type="file"
+            id="profile_picture"
+            name="profile_picture"
+            accept=".jpg,.jpeg,.png"
+          />
+        </div>
+        <div class="form-group">
           <label for="name">Nama</label>
           <input
             type="text"
