--- a/templates/profil.html
+++ b/templates/profil.html
@@ -13,10 +13,15 @@
     <div class="profile-container">
       <div class="profile-header">
         <img
-          src="{{ url_for('static', filename='images/profil.jpg') }}"
+          src="{% if current_user.profile_picture %}
+    {{ url_for('static', filename='images/' + current_user.profile_picture) }}
+  {% else %}
+    {{ url_for('static', filename='images/profil.jpg') }}
+  {% endif %}"
           alt="User Icon"
           class="profile-icon"
         />
+
         <h1>Profil Saya</h1>
       </div>
 
